k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: default
  labels:
    app: orders-api 
spec:
  selector:
    app: orders-api
  ports:
    - name: http
      port: 80
      targetPort: 5000
